# serializer version: 1
# name: test_update_entities[update.dashy_dashy_1_qgza68hnz4n1qvyz3iohynx05_image_update_available-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'update',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'update.dashy_dashy_1_qgza68hnz4n1qvyz3iohynx05_image_update_available',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Image update available',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Image update available',
    'platform': 'portainer',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <UpdateEntityFeature: 1>,
    'translation_key': 'container_image_update',
    'unique_id': 'portainer_test_entry_123_dashy_dashy.1.qgza68hnz4n1qvyz3iohynx05_container_image_update',
    'unit_of_measurement': None,
  })
# ---
# name: test_update_entities[update.dashy_dashy_1_qgza68hnz4n1qvyz3iohynx05_image_update_available-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <UpdateEntityStateAttribute.AUTO_UPDATE: 'auto_update'>: False,
      <UpdateEntityStateAttribute.DISPLAY_PRECISION: 'display_precision'>: 0,
      <EntityStateAttribute.ENTITY_PICTURE: 'entity_picture'>: '/api/brands/integration/portainer/icon.png',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'dashy_dashy.1.qgza68hnz4n1qvyz3iohynx05 Image update available',
      'image_created': datetime.datetime(2022, 2, 4, 21, 20, 12, 497794, tzinfo=datetime.timezone.utc),
      'image_size': 1239828,
      <UpdateEntityStateAttribute.IN_PROGRESS: 'in_progress'>: False,
      <UpdateEntityStateAttribute.INSTALLED_VERSION: 'installed_version'>: 'example:1.0 (sha256:afcc7f1ac1b4)',
      <UpdateEntityStateAttribute.LATEST_VERSION: 'latest_version'>: None,
      <UpdateEntityStateAttribute.RELEASE_SUMMARY: 'release_summary'>: None,
      <UpdateEntityStateAttribute.RELEASE_URL: 'release_url'>: 'https://hub.docker.com/r/lissy93/dashy/tags?name=latest',
      <UpdateEntityStateAttribute.SKIPPED_VERSION: 'skipped_version'>: None,
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <UpdateEntityFeature: 1>,
      <UpdateEntityStateAttribute.TITLE: 'title'>: 'dashy_dashy.1.qgza68hnz4n1qvyz3iohynx05',
      <UpdateEntityStateAttribute.UPDATE_PERCENTAGE: 'update_percentage'>: None,
    }),
    'context': <ANY>,
    'entity_id': 'update.dashy_dashy_1_qgza68hnz4n1qvyz3iohynx05_image_update_available',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_update_entities[update.focused_einstein_image_update_available-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'update',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'update.focused_einstein_image_update_available',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Image update available',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Image update available',
    'platform': 'portainer',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <UpdateEntityFeature: 1>,
    'translation_key': 'container_image_update',
    'unique_id': 'portainer_test_entry_123_focused_einstein_container_image_update',
    'unit_of_measurement': None,
  })
# ---
# name: test_update_entities[update.focused_einstein_image_update_available-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <UpdateEntityStateAttribute.AUTO_UPDATE: 'auto_update'>: False,
      <UpdateEntityStateAttribute.DISPLAY_PRECISION: 'display_precision'>: 0,
      <EntityStateAttribute.ENTITY_PICTURE: 'entity_picture'>: '/api/brands/integration/portainer/icon.png',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'focused_einstein Image update available',
      'image_created': datetime.datetime(2022, 2, 4, 21, 20, 12, 497794, tzinfo=datetime.timezone.utc),
      'image_size': 1239828,
      <UpdateEntityStateAttribute.IN_PROGRESS: 'in_progress'>: False,
      <UpdateEntityStateAttribute.INSTALLED_VERSION: 'installed_version'>: 'example:1.0 (sha256:afcc7f1ac1b4)',
      <UpdateEntityStateAttribute.LATEST_VERSION: 'latest_version'>: None,
      <UpdateEntityStateAttribute.RELEASE_SUMMARY: 'release_summary'>: None,
      <UpdateEntityStateAttribute.RELEASE_URL: 'release_url'>: 'https://hub.docker.com/_/redis/tags?name=7',
      <UpdateEntityStateAttribute.SKIPPED_VERSION: 'skipped_version'>: None,
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <UpdateEntityFeature: 1>,
      <UpdateEntityStateAttribute.TITLE: 'title'>: 'focused_einstein',
      <UpdateEntityStateAttribute.UPDATE_PERCENTAGE: 'update_percentage'>: None,
    }),
    'context': <ANY>,
    'entity_id': 'update.focused_einstein_image_update_available',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_update_entities[update.funny_chatelet_image_update_available-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'update',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'update.funny_chatelet_image_update_available',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Image update available',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Image update available',
    'platform': 'portainer',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <UpdateEntityFeature: 1>,
    'translation_key': 'container_image_update',
    'unique_id': 'portainer_test_entry_123_funny_chatelet_container_image_update',
    'unit_of_measurement': None,
  })
# ---
# name: test_update_entities[update.funny_chatelet_image_update_available-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <UpdateEntityStateAttribute.AUTO_UPDATE: 'auto_update'>: False,
      <UpdateEntityStateAttribute.DISPLAY_PRECISION: 'display_precision'>: 0,
      <EntityStateAttribute.ENTITY_PICTURE: 'entity_picture'>: '/api/brands/integration/portainer/icon.png',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'funny_chatelet Image update available',
      'image_created': datetime.datetime(2022, 2, 4, 21, 20, 12, 497794, tzinfo=datetime.timezone.utc),
      'image_size': 1239828,
      <UpdateEntityStateAttribute.IN_PROGRESS: 'in_progress'>: False,
      <UpdateEntityStateAttribute.INSTALLED_VERSION: 'installed_version'>: 'example:1.0 (sha256:afcc7f1ac1b4)',
      <UpdateEntityStateAttribute.LATEST_VERSION: 'latest_version'>: 'example:1.0 (sha256:newdigest123)',
      <UpdateEntityStateAttribute.RELEASE_SUMMARY: 'release_summary'>: None,
      <UpdateEntityStateAttribute.RELEASE_URL: 'release_url'>: 'https://hub.docker.com/_/ubuntu/tags?name=latest',
      <UpdateEntityStateAttribute.SKIPPED_VERSION: 'skipped_version'>: None,
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <UpdateEntityFeature: 1>,
      <UpdateEntityStateAttribute.TITLE: 'title'>: 'funny_chatelet',
      <UpdateEntityStateAttribute.UPDATE_PERCENTAGE: 'update_percentage'>: None,
    }),
    'context': <ANY>,
    'entity_id': 'update.funny_chatelet_image_update_available',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_update_entities[update.practical_morse_image_update_available-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'update',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'update.practical_morse_image_update_available',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Image update available',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Image update available',
    'platform': 'portainer',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <UpdateEntityFeature: 1>,
    'translation_key': 'container_image_update',
    'unique_id': 'portainer_test_entry_123_practical_morse_container_image_update',
    'unit_of_measurement': None,
  })
# ---
# name: test_update_entities[update.practical_morse_image_update_available-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <UpdateEntityStateAttribute.AUTO_UPDATE: 'auto_update'>: False,
      <UpdateEntityStateAttribute.DISPLAY_PRECISION: 'display_precision'>: 0,
      <EntityStateAttribute.ENTITY_PICTURE: 'entity_picture'>: '/api/brands/integration/portainer/icon.png',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'practical_morse Image update available',
      'image_created': datetime.datetime(2022, 2, 4, 21, 20, 12, 497794, tzinfo=datetime.timezone.utc),
      'image_size': 1239828,
      <UpdateEntityStateAttribute.IN_PROGRESS: 'in_progress'>: False,
      <UpdateEntityStateAttribute.INSTALLED_VERSION: 'installed_version'>: 'example:1.0 (sha256:afcc7f1ac1b4)',
      <UpdateEntityStateAttribute.LATEST_VERSION: 'latest_version'>: None,
      <UpdateEntityStateAttribute.RELEASE_SUMMARY: 'release_summary'>: None,
      <UpdateEntityStateAttribute.RELEASE_URL: 'release_url'>: 'https://hub.docker.com/_/python/tags?name=3.13-slim',
      <UpdateEntityStateAttribute.SKIPPED_VERSION: 'skipped_version'>: None,
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <UpdateEntityFeature: 1>,
      <UpdateEntityStateAttribute.TITLE: 'title'>: 'practical_morse',
      <UpdateEntityStateAttribute.UPDATE_PERCENTAGE: 'update_percentage'>: None,
    }),
    'context': <ANY>,
    'entity_id': 'update.practical_morse_image_update_available',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_update_entities[update.serene_banach_image_update_available-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'update',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'update.serene_banach_image_update_available',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Image update available',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Image update available',
    'platform': 'portainer',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <UpdateEntityFeature: 1>,
    'translation_key': 'container_image_update',
    'unique_id': 'portainer_test_entry_123_serene_banach_container_image_update',
    'unit_of_measurement': None,
  })
# ---
# name: test_update_entities[update.serene_banach_image_update_available-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <UpdateEntityStateAttribute.AUTO_UPDATE: 'auto_update'>: False,
      <UpdateEntityStateAttribute.DISPLAY_PRECISION: 'display_precision'>: 0,
      <EntityStateAttribute.ENTITY_PICTURE: 'entity_picture'>: '/api/brands/integration/portainer/icon.png',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'serene_banach Image update available',
      'image_created': datetime.datetime(2022, 2, 4, 21, 20, 12, 497794, tzinfo=datetime.timezone.utc),
      'image_size': 1239828,
      <UpdateEntityStateAttribute.IN_PROGRESS: 'in_progress'>: False,
      <UpdateEntityStateAttribute.INSTALLED_VERSION: 'installed_version'>: 'example:1.0 (sha256:afcc7f1ac1b4)',
      <UpdateEntityStateAttribute.LATEST_VERSION: 'latest_version'>: None,
      <UpdateEntityStateAttribute.RELEASE_SUMMARY: 'release_summary'>: None,
      <UpdateEntityStateAttribute.RELEASE_URL: 'release_url'>: 'https://hub.docker.com/_/nginx/tags?name=latest',
      <UpdateEntityStateAttribute.SKIPPED_VERSION: 'skipped_version'>: None,
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <UpdateEntityFeature: 1>,
      <UpdateEntityStateAttribute.TITLE: 'title'>: 'serene_banach',
      <UpdateEntityStateAttribute.UPDATE_PERCENTAGE: 'update_percentage'>: None,
    }),
    'context': <ANY>,
    'entity_id': 'update.serene_banach_image_update_available',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_update_entities[update.stoic_turing_image_update_available-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'update',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'update.stoic_turing_image_update_available',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Image update available',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Image update available',
    'platform': 'portainer',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <UpdateEntityFeature: 1>,
    'translation_key': 'container_image_update',
    'unique_id': 'portainer_test_entry_123_stoic_turing_container_image_update',
    'unit_of_measurement': None,
  })
# ---
# name: test_update_entities[update.stoic_turing_image_update_available-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <UpdateEntityStateAttribute.AUTO_UPDATE: 'auto_update'>: False,
      <UpdateEntityStateAttribute.DISPLAY_PRECISION: 'display_precision'>: 0,
      <EntityStateAttribute.ENTITY_PICTURE: 'entity_picture'>: '/api/brands/integration/portainer/icon.png',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'stoic_turing Image update available',
      'image_created': datetime.datetime(2022, 2, 4, 21, 20, 12, 497794, tzinfo=datetime.timezone.utc),
      'image_size': 1239828,
      <UpdateEntityStateAttribute.IN_PROGRESS: 'in_progress'>: False,
      <UpdateEntityStateAttribute.INSTALLED_VERSION: 'installed_version'>: 'example:1.0 (sha256:afcc7f1ac1b4)',
      <UpdateEntityStateAttribute.LATEST_VERSION: 'latest_version'>: None,
      <UpdateEntityStateAttribute.RELEASE_SUMMARY: 'release_summary'>: None,
      <UpdateEntityStateAttribute.RELEASE_URL: 'release_url'>: 'https://hub.docker.com/_/postgres/tags?name=15',
      <UpdateEntityStateAttribute.SKIPPED_VERSION: 'skipped_version'>: None,
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <UpdateEntityFeature: 1>,
      <UpdateEntityStateAttribute.TITLE: 'title'>: 'stoic_turing',
      <UpdateEntityStateAttribute.UPDATE_PERCENTAGE: 'update_percentage'>: None,
    }),
    'context': <ANY>,
    'entity_id': 'update.stoic_turing_image_update_available',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
